[package]
name = "bitvmx-broker"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3"
tarpc = { version = "0.35", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-serde = "0.9.0"
tracing = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
rust-bitvmx-storage-backend = { path = "../rust-bitvmx-storage-backend", optional = true }
tokio-rustls = "0.26.2"
tokio-util = "0.7.14"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"

[dev-dependencies]
ctrlc = "3.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
#default = ["storagebackend"]
storagebackend = ["rust-bitvmx-storage-backend"]
